# api/routes/usuariosRoute.js
@@ -8,10 +8,10 @@ const router = express.Router();
 router.use(autenticado)
 
 router
-    .post('/cadastrar', UsuarioController.cadastrar)
-    .get('/buscar/todos', UsuarioController.buscarTodosUsuarios)
-    .get('/buscar/id/:id', UsuarioController.buscarUsuarioPorId)
-    .put('/editar/id/:id', UsuarioController.editarUsuario)
-    .delete('/deletar/id/:id', UsuarioController.deletarUsuario)
+    .post('', UsuarioController.cadastrar)
+    .get('', UsuarioController.buscarTodosUsuarios)
+    .get('/:id', UsuarioController.buscarUsuarioPorId)
+    .put('/:id', UsuarioController.editarUsuario)
+    .delete('/:id', UsuarioController.deletarUsuario)
 
 module.exports = router
